--- a/Event-Delegation/index.html
+++ b/Event-Delegation/index.html
@@ -16,6 +16,7 @@
 			<button class="child">console.log6</button>
 			<button class="child">console.log7</button>
 			<button class="child">console.log8</button>
+			<button class="grandChild">console.log9</button>
 		</div>
 		<script src="./script.js"></script>
 	</body>
